# Tyche

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/architecture/: developer-guide.md  multi-repo-architecture.md
docs/design/: cpp_module_transport_design_v1.md  github_migration_design_v1.md  static_data_design_v1.md
docs/impl/: confidential_reference_cleanup_implement_v1.md  cpp_module_transport_implement_v1.md  static_data_implement_v1.md
docs/migration/: from-monorepo.md
docs/plan/: cpp_module_transport_plan_v1.md  github_migration_plan_v1.md  static_data_plan_v1.md
docs/protocol/: README.md  event-types.md  message-format.md  shm-wire-format.md  zmq-port-layout.md
docs/sdk/: cpp-sdk-interface.md  python-sdk-interface.md
runtime/engine/: ctp_gateway.json  tyche_engine.json
scripts/: start-engine.ps1  start-engine.sh
src/tyche/cpp/: CMakeLists.txt  message.cpp  module.cpp  module.h
src/tyche/cpp/cmake/: TycheBuild.cmake
src/tyche/cpp/engine/: CMakeLists.txt  engine.cpp  engine.h  fast_clock.cpp  fast_clock.h  main.cpp  shared_memory_bridge.cpp  shared_memory_bridge.h  topic_queue.h
src/tyche/cpp/module/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_config.cpp  test_engine.cpp  test_engine_integration.cpp  test_fast_clock.cpp  test_module_transport.cpp  test_sharded_topic_map.cpp  test_shared_memory_bridge.cpp  test_shm_wire_format.cpp
tests/perf/: CMakeLists.txt
